# boluo-server

./: .env.dev.template  .env.docker.template  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  default.nix  docker-compose.yml  dprint.json  flake.nix  schema.sql  test.sh
.github/workflows/: ci.yml  docker.yml  nightly.yaml  release.yml
deploy/: nginx.conf
migrations/0000-channel-default-dice/: down.sql  up.sql
migrations/0001-media-source/: down.sql  up.sql
migrations/0002-remove-hide/: down.sql  up.sql
migrations/0003-message-unique-index/: down.sql  up.sql
migrations/0004-user-settings/: down.sql  up.sql
migrations/0005-space-index/: down.sql  up.sql
migrations/0006-space-and-channel/: down.sql  up.sql
migrations/0007-document-channel/: down.sql  up.sql
migrations/0008-utc-now/: down.sql  up.sql
migrations/0009-rational/: down.sql  up.sql
migrations/0010-channels-old-name/: down.sql  up.sql
migrations/0011-remove_unique_order/: up.sql
migrations/0012-pos-index/: down.sql  up.sql
migrations/2019-12-11-024148_initial/: down.sql  up.sql
migrations/2020-01-13-070735_alter_messages/: down.sql  up.sql
migrations/2020-01-13-112558_move_is_master/: down.sql  up.sql
migrations/2020-01-14-095155_event/: down.sql  up.sql
migrations/2020-01-15-075554_media_fix/: down.sql  up.sql
migrations/2020-01-22-103312_message_color/: down.sql  up.sql
migrations/2020-02-19-124830_modify_channel_member/: down.sql  up.sql
src/: api.rs  cache.rs  channels.rs  common.rs  context.rs  cors.rs  csrf.rs  database.rs  date_format.rs  error.rs  events.rs  handlers.rs  interface.rs  logger.rs  mail.rs  manage.rs  media.rs  messages.rs  pool.rs  pos.rs  redis.rs  schema.rs  server.rs  session.rs  spaces.rs  users.rs  utils.rs  validator.rs  validators.rs  websocket.rs
src/channels/: api.rs  delete_channel.sql  handlers.rs  models.rs  remove_user_from_channel.sql  select_channel_members.sql
src/channels/sql/: add_user_to_channel.sql  create_channel.sql  delete_channel.sql  edit_channel.sql  fetch_channel_with_space.sql  get_channel_by_name.sql  get_channel_member.sql  get_channels_by_user.sql  get_members_information_by_channel.sql  get_members_of_channel.sql  get_with_space_member.sql  is_master.sql  remove_members_by_space.sql  remove_user_by_space.sql  remove_user_from_channel.sql  set_master.sql  set_member.sql
src/database/: pool.rs  query.rs
src/database/sql/: add_user_to_channel.sql  add_user_to_space.sql  create_channel.sql  create_message.sql  create_space.sql  delete_channel.sql  delete_space.sql  edit_message.sql  fetch_channel_member.sql  fetch_space_member.sql  is_space_public.sql  remove_user_from_channel.sql  remove_user_from_space.sql  select_messages.sql  select_space_channels.sql  select_space_members.sql  select_spaces.sql  select_users.sql  set_channel_member.sql  set_space_member.sql
src/events/: api.rs  context.rs  events.rs  handlers.rs  models.rs  preview.rs  tasks.rs
src/media/: api.rs  handlers.rs  models.rs
src/media/sql/: create.sql  get_by_filename.sql
src/messages/: api.rs  get_message_and_space_member.sql  handlers.rs  models.rs  remove_message.sql
src/messages/sql/: create.sql  edit.sql  export.sql  get.sql  get_bottom_near_offset.sql  get_by_channel.sql  get_earlier_offset.sql  get_top_near_offset.sql  get_with_space_member.sql  make_room_bottom.sql  make_room_earlier.sql  make_room_later.sql  make_room_top.sql  max_pos.sql  move_to_date.sql  set_deferred.sql  set_order.sql
src/spaces/: api.rs  create_space.sql  delete_space.sql  fetch_space.sql  handlers.rs  is_space_public.sql  mod.rs  models.rs  remove_user_from_space.sql  select_space_channels.sql  select_spaces.sql
src/spaces/sql/: add_user_to_space.sql  create.sql  delete.sql  edit.sql  get_members_by_channel.sql  get_members_by_spaces.sql  get_spaces_by_user.sql  search.sql
src/users/: api.rs  create_user.sql  delete_user.sql  fetch_user.sql  handlers.rs  mod.rs  models.rs  select_users.sql
src/users/sql/: login.sql
