[package]
name = "boluo_server"
version = "0.1.0"
authors = ["Quan Brew <t@ioover.net>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "manage"
path = "src/manage.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
postgres-types = { version = "0.2", features = ["derive"]}
async-trait = "0.1.36"
dotenv = "0.15"
anyhow = "1.0"
once_cell = "1.5"
thiserror = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.2"
futures = "0.3"
regex = "1"
serde_urlencoded = "0.7"
cookie = "0.14"
time = { version = "0.2", default-features = false }
ring = "0.16"
base64 = "0.12"
log = "0.4"
percent-encoding = "2.1.0"
blake3 = "0.3"
mime = "0.3"
bytes = "1"
tokio-tungstenite = "0.13"
clap = "3.0.0-beta.2"
postgres = "0.19"
tokio-stream = "0.1"

[dependencies.hyper]
version = "0.14"
features = ["server", "http1", "http2", "runtime", "stream"]

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.tokio-postgres]
version = "0.7"
features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v1", "v4"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.redis]
version = "0.20.0"
default-features = false
features = ["connection-manager", "tokio-comp"]

[dependencies.fern]
version = "0.6"
features = ["colored"]

