[package]
name = "boluo_server"
version = "0.1.0"
authors = ["Quan Brew <t@ioover.net>"]
default-run = "server"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "manage"
path = "src/manage.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
base64 = "0.13"
blake3 = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.15"
crc32fast = "1.2"
dotenv = "0.15"
futures = "0.3"
itertools = "0.10.1"
log = "0.4"
mime = "0.3"
once_cell = "1.8"
percent-encoding = "2.1.0"
postgres = "0.19"
postgres-types = { version = "0.2", features = ["derive"] }
regex = "1"
ring = "0.16"
serde_json = "1.0"
serde_repr = "0.1"
serde_urlencoded = "0.7"
thiserror = "1.0"
tokio-stream = "0.1"
tokio-tungstenite = "0.15"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.time]
version = "0.2"
default-features = false
features = ["std"]

[dependencies.clap]
version = "3.1"
features = ["derive"]

[dependencies.sentry]
version = "0.23.0"
features = ["backtrace", "contexts", "panic", "transport"]

[dependencies.hyper]
version = "0.14"
features = ["server", "http1", "http2", "runtime", "stream"]

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.tokio-postgres]
version = "0.7"
features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v1", "v4"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.redis]
version = "0.21.0"
default-features = false
features = ["connection-manager", "tokio-comp"]

[dependencies.fern]
version = "0.6"
features = ["colored"]
